bloodc/src/parser/snapshots/bloodc__parser__tests__arithmetic_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Binary {
                                    op: Div,
                                    left: Expr {
                                        kind: Binary {
                                            op: Sub,
                                            left: Expr {
                                                kind: Binary {
                                                    op: Mul,
                                                    left: Expr {
                                                        kind: Binary {
                                                            op: Add,
                                                            left: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 1,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 9,
                                                                            end: 10,
                                                                            start_line: 1,
                                                                            start_col: 10,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 10,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                            right: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 2,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 13,
                                                                            end: 14,
                                                                            start_line: 1,
                                                                            start_col: 14,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 14,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 3,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 17,
                                                                    end: 18,
                                                                    start_line: 1,
                                                                    start_col: 18,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 17,
                                                            end: 18,
                                                            start_line: 1,
                                                            start_col: 18,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 4,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 21,
                                                            end: 22,
                                                            start_line: 1,
                                                            start_col: 22,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 21,
                                                    end: 22,
                                                    start_line: 1,
                                                    start_col: 22,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 22,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    right: Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Int {
                                                    value: 2,
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 25,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 26,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 25,
                                            end: 26,
                                            start_line: 1,
                                            start_col: 26,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 26,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 28,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 28,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 28,
        start_line: 1,
        start_col: 1,
    },
}
