bloodc/src/parser/snapshots/bloodc__parser__tests__const_decl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected keyword `fn`, found type identifier", span: Span { start: 6, end: 8, start_line: 1, start_col: 7 }, labels: [], suggestions: [] }]
