bloodc/src/parser/snapshots/bloodc__parser__tests__const_generic_function.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected literal, identifier, `(`, `[`, `{`, `if`, or `match`, found contextual keyword `default`", span: Span { start: 68, end: 75, start_line: 1, start_col: 69 }, labels: [], suggestions: [] }]
