bloodc/src/parser/snapshots/bloodc__parser__tests__edge_keywords_as_field_names.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected field name, found keyword `pure`", span: Span { start: 51, end: 55, start_line: 5, start_col: 5 }, labels: [], suggestions: [], source_file: None, source_content: None }]
